src/objects/Brand_n_Comp__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Brand_type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Brand</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_type__c</fullName>
        <label>Brand type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consumption__c</fullName>
        <label>Consumption</label>
        <referenceTo>Consumption__c</referenceTo>
        <relationshipLabel>Brands &amp; Competitors</relationshipLabel>
        <relationshipName>Brands_n_competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contributed_Volume__c</fullName>
        <formula>(Consumption__r.Volume_MT__c * Share__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contributed Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Group_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Product Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Share__c</fullName>
        <label>Share %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Brand &amp; Competitor</label>
    <nameField>
        <displayFormat>BnC-{0000}</displayFormat>
        <label>Brand n Competitor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brands &amp; Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>